# prismatica

./: .clippy.toml  .gitignore  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml  dev.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  clippy.yml  test.yml
benches/: colormaps.rs
examples/: bevy_color_srgba.rs  colored_text.rs  comfy_table_heatmap.rs  crossterm_gradient.rs  cursive_colors.rs  egui_palette.rs  export_palette.rs  find_colormap.rs  iced_colors.rs  image_gradient.rs  list_all.rs  macroquad_colors.rs  owo_colors_text.rs  palette_convert.rs  plotters_heatmap.rs  ratatui_gradient.rs  sample_colormap.rs  slint_palette.rs  syntect_highlight.rs  termion_gradient.rs  tiny_skia_gradient.rs  wgpu_clear_colors.rs
src/: lib.rs  prelude.rs  registry.rs  traits.rs  types.rs
src/cartocolors/: ag_grnyl.rs  ag_sunset.rs  antique.rs  armyrose.rs  blugrn.rs  bluyl.rs  bold.rs  brwnyl.rs  burg.rs  burgyl.rs  darkmint.rs  earth.rs  emrld.rs  fall.rs  geyser.rs  magenta.rs  mint.rs  mod.rs  oryel.rs  pastel.rs  peach.rs  pinkyl.rs  prism.rs  purp.rs  purpor.rs  redor.rs  safe.rs  sunset.rs  sunsetdark.rs  teal.rs  tealgrn.rs  tealrose.rs  temps.rs  tropic.rs  vivid.rs
src/cet/: cet_c1.rs  cet_c1s.rs  cet_c2.rs  cet_c2s.rs  cet_c3.rs  cet_c3s.rs  cet_c4.rs  cet_c4s.rs  cet_c5.rs  cet_c5s.rs  cet_c6.rs  cet_c6s.rs  cet_c7.rs  cet_c7s.rs  cet_cbc1.rs  cet_cbc2.rs  cet_cbd1.rs  cet_cbl1.rs  cet_cbl2.rs  cet_d01.rs  cet_d01a.rs  cet_d02.rs  cet_d03.rs  cet_d04.rs  cet_d06.rs  cet_d07.rs  cet_d08.rs  cet_d09.rs  cet_d10.rs  cet_d11.rs  cet_d12.rs  cet_d13.rs  cet_i1.rs  cet_i2.rs  cet_i3.rs  cet_l01.rs  cet_l02.rs  cet_l03.rs  cet_l04.rs  cet_l05.rs  (+20 more)
src/cmasher/: amber.rs  amethyst.rs  apple.rs  arctic.rs  bubblegum.rs  chroma.rs  copper.rs  cosmic.rs  dusk.rs  eclipse.rs  ember.rs  emerald.rs  emergency.rs  fall.rs  flamingo.rs  freeze.rs  fusion.rs  gem.rs  ghostlight.rs  gothic.rs  guppy.rs  holly.rs  horizon.rs  iceburn.rs  infinity.rs  jungle.rs  lavender.rs  lilac.rs  mod.rs  neon.rs  neutral.rs  nuclear.rs  ocean.rs  pepper.rs  pride.rs  prinsenvlag.rs  rainforest.rs  redshift.rs  sapphire.rs  savanna.rs  (+14 more)
src/cmocean/: algae.rs  amp.rs  balance.rs  curl.rs  deep.rs  delta.rs  dense.rs  diff.rs  gray.rs  haline.rs  ice.rs  matter.rs  mod.rs  oxy.rs  phase.rs  rain.rs  solar.rs  speed.rs  tarn.rs  tempo.rs  thermal.rs  topo.rs  turbid.rs
src/colorbrewer/: accent.rs  blues.rs  brbg.rs  bugn.rs  bupu.rs  dark2.rs  gnbu.rs  greens.rs  greys.rs  mod.rs  oranges.rs  orrd.rs  paired.rs  pastel1.rs  pastel2.rs  piyg.rs  prgn.rs  pubu.rs  pubugn.rs  puor.rs  purd.rs  purples.rs  rdbu.rs  rdgy.rs  rdpu.rs  rdylbu.rs  rdylgn.rs  reds.rs  set1.rs  set2.rs  set3.rs  spectral.rs  ylgn.rs  ylgnbu.rs  ylorbr.rs  ylorrd.rs
src/crameri/: acton.rs  bam.rs  bamako.rs  bamo.rs  batlow.rs  batlowk.rs  batloww.rs  berlin.rs  bilbao.rs  broc.rs  broco.rs  buda.rs  bukavu.rs  cork.rs  corko.rs  davos.rs  devon.rs  fes.rs  glasgow.rs  grayc.rs  hawaii.rs  imola.rs  lajolla.rs  lapaz.rs  lipari.rs  lisbon.rs  managua.rs  mod.rs  navia.rs  naviaw.rs  nuuk.rs  oleron.rs  oslo.rs  roma.rs  romao.rs  tofino.rs  tokyo.rs  turku.rs  vanimo.rs  vik.rs  (+1 more)
src/d3/: cool.rs  cubehelixdefault.rs  mod.rs  rainbow.rs  sinebow.rs  tableau10.rs  turbo.rs  warm.rs
src/integration/: bevy_color.rs  colored.rs  comfy_table.rs  crossterm.rs  cursive.rs  egui.rs  iced.rs  image.rs  macroquad.rs  mod.rs  owo_colors.rs  palette_crate.rs  plotters.rs  ratatui.rs  serde_support.rs  slint.rs  syntect.rs  termion.rs  tiny_skia.rs  wgpu.rs
src/matplotlib/: cividis.rs  inferno.rs  magma.rs  mako.rs  mod.rs  plasma.rs  rocket.rs  twilight.rs  viridis.rs
src/moreland/: bent_cool_warm.rs  black_body.rs  extended_kindlmann.rs  fast.rs  kindlmann.rs  mod.rs  smooth_cool_warm.rs
src/ncar/: amwg256.rs  bkblaqgryeorreviwh200.rs  blaqgryeorre.rs  blaqgryeorrevi200.rs  blgryeorrevi200.rs  blre.rs  blwhre.rs  gmt_cool.rs  gmt_copper.rs  gmt_drywet.rs  gmt_gebco.rs  gmt_globe.rs  gmt_gray.rs  gmt_haxby.rs  gmt_hot.rs  gmt_jet.rs  gmt_ocean.rs  gmt_panoply.rs  gmt_polar.rs  gmt_relief.rs  gmt_seis.rs  gmt_split.rs  gmt_topo.rs  gmt_wysiwyg.rs  greenmagenta16.rs  hotcold_18lev.rs  hotcolr_19lev.rs  matlab_hsv.rs  matlab_jet.rs  mod.rs  ncview_default.rs  nrl_sirkes.rs  nrl_sirkes_nowhite.rs  posneg_1.rs  precip3_16lev.rs  radar_1.rs  sunshine_9lev.rs  temp_19lev.rs  temp_diff_18lev.rs  thelix.rs  (+5 more)
tests/: colormaps.rs  property.rs  snapshots.rs
tests/snapshots/: snapshots__snapshot_tests__batlow_definition.snap  snapshots__snapshot_tests__colorbrewer_mod_header.snap  snapshots__snapshot_tests__crameri_mod_header.snap  snapshots__snapshot_tests__registry_counts.snap
xtask/: Cargo.toml
xtask/src/: check.rs  clean.rs  codegen.rs  main.rs
xtask/src/fetch/: cartocolors.rs  cet.rs  cmasher.rs  cmocean.rs  colorbrewer.rs  crameri.rs  d3.rs  matplotlib.rs  mod.rs  moreland.rs  ncar.rs
xtask/src/generate/: cartocolors.rs  colorbrewer.rs  d3.rs  mod.rs
