[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
ureq = "3.3.0"
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
